New color gradient added

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-        background-image: linear-gradient(120deg,#f6d365, #fda085);
+        background-image: linear-gradient(120deg,#23074d, #cc5333);
         color: #ffffff;
         font-family: "Poppins", sans-serif;
         min-height: 100vh;
